# strace-ftrace

./: ProjectHome.md
ftrace/: CMakeLists.txt
ftrace/inc/: ElfParser.hpp  Tracer.hpp  signals.hpp
ftrace/src/: Options.cpp  main.cpp
strace/inc/: Options.hpp
trunk/: .svnignore  CMakeLists.txt
trunk/ftrace/: CMakeLists.txt
trunk/ftrace/inc/: SyscallNames.hpp
trunk/ftrace/src/: ElfParser.cpp  Tracer.cpp  signals.cpp
trunk/strace/: CMakeLists.txt
trunk/strace/src/: Tracer.cpp  main.cpp
